--- a/src/configs/sdn_argo_fulltrain.config
+++ b/src/configs/sdn_argo_fulltrain.config
@@ -3,9 +3,9 @@ epochs=800
 lr_gamma=0.1
 lr_stepsize=[200]
 save_path=/Developer/3DObject/MyPseudoLidarresults/sdn_argo
-datapath=/Developer/Dataset/Argoverse/argoverse-conv-rect-mynew/training/
-split_train=./split/train_argo.txt
-split_val=./split/subval_argo.txt
+datapath=/Developer/Dataset/Argoverse/argoverse-conv-rect-all/training/
+split_train=./split/train_fullargo.txt
+split_val=./split/subval_fullargo.txt
 btrain=4
 bval=1
 arch=SDNet
